--- a/test3.ipynb
+++ b/test3.ipynb
@@ -2,31 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "db941205-e7bf-4f9a-95dd-b80f3f9321a2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>User</th><th>Current session?</th></tr><tr><td>0</td><td>3cd3af0a-148a-43ef-b482-bc50f7f19851</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"https://console-intl.huaweicloud.com/dli/web/0b33ea2a7e0010802fe4c009bb05076d/batch/3cd3af0a-148a-43ef-b482-bc50f7f19851/sparkui\">Link</a></td><td><a target=\"_blank\" href=\"https://console-intl.huaweicloud.com/dli/?type=RUN#/main/jobs/spark/submitLog/3cd3af0a-148a-43ef-b482-bc50f7f19851\">Link</a></td><td>None</td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
        "model_id": "",
@@ -44,62 +24,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3"
+      "20241024"
      ]
     }
    ],
    "source": [
-    "print(1+2);"
+    "print(1+2+20241021);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6d6f97b0-25e6-44ff-8c67-6a0219b7030a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>User</th><th>Current session?</th></tr><tr><td>10</td><td>3f5c35b9-0cc8-4f7f-a580-ec60b7f4c784</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"https://console-intl.huaweicloud.com/dli/web/0b33ea2a7e0010802fe4c009bb05076d/batch/3f5c35b9-0cc8-4f7f-a580-ec60b7f4c784/sparkui\">Link</a></td><td><a target=\"_blank\" href=\"https://console-intl.huaweicloud.com/dli/?type=RUN#/main/jobs/spark/submitLog/3f5c35b9-0cc8-4f7f-a580-ec60b7f4c784\">Link</a></td><td>None</td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
        "model_id": "",
@@ -117,33 +56,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Row(id=None, name='name'), Row(id=1000, name='TRUE'), Row(id=2000, name='FALSE')]"
+      "2024-10-21 15:23:45.251575\n",
+      "2024-10-21 15:23:57.449734"
      ]
     }
    ],
    "source": [
-    "spark.sql(\"select * from andreani_poc.table1_obs_csv\").collect();"
+    "import datetime\n",
+    "\n",
+    "print( datetime.datetime.now())\n",
+    "spark.sql(\"select * from andreani_poc.table1_obs_csv\").collect();\n",
+    "print( datetime.datetime.now())"
    ]
   },
   {
@@ -156,8 +79,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0b95e454-b432-42c4-bf7a-4aa4c490a752",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Row(id=None, name='name')]"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"select * from andreani_poc.table1_obs_csv limit 2\").collect();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6a286bd-be6c-4470-97e8-9cbd89c3b2b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff6ddb0b-49da-4bed-892d-2308e5e37352",
    "metadata": {},
    "outputs": [],
    "source": []
