Added new for PoC show

--- a/src/test3.ipynb
+++ b/src/test3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "db941205-e7bf-4f9a-95dd-b80f3f9321a2",
    "metadata": {},
    "outputs": [
@@ -12,64 +12,10 @@
      "text": [
       "Starting Spark application\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>User</th><th>Current session?</th></tr><tr><td>0</td><td>3cd3af0a-148a-43ef-b482-bc50f7f19851</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"https://console-intl.huaweicloud.com/dli/web/0b33ea2a7e0010802fe4c009bb05076d/batch/3cd3af0a-148a-43ef-b482-bc50f7f19851/sparkui\">Link</a></td><td><a target=\"_blank\" href=\"https://console-intl.huaweicloud.com/dli/?type=RUN#/main/jobs/spark/submitLog/3cd3af0a-148a-43ef-b482-bc50f7f19851\">Link</a></td><td>None</td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3"
-     ]
     }
    ],
    "source": [
+    "print(1+2);\n",
     "print(1+2);"
    ]
   },
